# grepple

./: .gitignore  CMakeLists.txt  LICENSE  README.md  breakpoints  fs_parser.c  fs_parser.h  grepple  main.c  makefile  searcher.c  searcher.h  ts_main.c  ts_main.h
src/: dir.c  dir.h  file.c  file.h  filer.c  filer.h  fs_parser.c  fs_parser.h  grepple.c  grepple.h  init.c  init.h  main.c  makefile  match_printer.c  match_printer.h  mem.h  options.c  options.h  output.c  output.h  search.c  search.h  searcher.c  searcher.h  stack.c  stack.h  test.c  test_lib.c  util.c  util.h
src/lists/: linked_list.c  linked_list.c~  linked_list.h  linked_list.h~
src/stack/: stack.c  stack.h
tests/: a.out  dir_list.c  file_type_test.c  ignore.c  init.c  init_test.c  join.c  main.c  makefile  opts.c  p  searcher_test.c  searcher_test.c~  test_lib.c
